@@ -38,6 +38,7 @@ import java.nio.file.Path;
 import java.time.Duration;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import org.apache.kafka.common.config.TopicConfig;
 import org.apache.kafka.common.serialization.Serdes;
 import org.apache.kafka.common.serialization.StringDeserializer;
@@ -231,7 +232,7 @@ class MaterializedXTest {
             final List<String> stores = information.getStores();
             final List<StateStore> stateStores = stores.stream()
                     .map(testDriver::getKeyValueStore)
-                    .toList();
+                    .collect(Collectors.toList());
             this.softly.assertThat(stateStores)
                     .allSatisfy(stateStore -> this.softly.assertThat(stateStore.persistent()).isFalse());
         }
@@ -261,7 +262,7 @@ class MaterializedXTest {
             final List<String> stores = information.getStores();
             final List<StateStore> stateStores = stores.stream()
                     .map(testDriver::getKeyValueStore)
-                    .toList();
+                    .collect(Collectors.toList());
             this.softly.assertThat(stateStores)
                     .allSatisfy(stateStore -> this.softly.assertThat(stateStore.persistent()).isFalse());
         }
